# 3dsemu

./: CMakeLists.txt
src/: CMakeLists.txt
src/installer/: CMakeLists.txt  main.cpp  main.h  mainwindow.ui
